test/sema/typeck/struct/type-params-too-many.dora
struct Foo[T](Int32)
fn f(): Foo[Int32] { Foo[Int32, Bool](1i32) }
